--- a/go-rest-api/docker-compose.yml
+++ b/go-rest-api/docker-compose.yml
@@ -24,6 +24,6 @@ services:
       POSTGRES_DB: "go_restful"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
+      testerval: 10s
       timeout: 5s
       retries: 5
